--- a/client/index.html
+++ b/client/index.html
@@ -9,124 +9,143 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script data-require="jquery@*" data-semver="2.1.4" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script data-require="jquery-ui@*" data-semver="1.11.2" src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-  <link data-require="jquery-ui@*" data-semver="1.11.2" rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css"  />
-  <link data-semver="3.3.5" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
-  <link data-semver="3.3.5" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/sandstone/bootstrap.min.css"/>
-  <link data-semver="3.3.5" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
+  <link data-require="jquery-ui@*" data-semver="1.11.2" rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css"
+  />
+  <link data-semver="3.3.5" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+  <link data-semver="3.3.5" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/sandstone/bootstrap.min.css"
+  />
+  <link data-semver="3.3.5" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <script data-require="bootstrap@*" data-semver="3.3.5" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
   <script data-require="angular.js@1.4.7" data-semver="1.4.7" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.js"></script>
+  <!--<script data-require="angular-ui-bootstrap@*" data-semver="0.14.3" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script> -->
   <link rel="stylesheet" href="content/styles/app.css" />
   <link rel="stylesheet" href="content/styles/autocomplete.css" />
+  <link rel="stylesheet" href="content/styles/xeditable.css" />
 </head>
-<body role="document" ng-controller="Main as vm">
-      <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Ecosphere Project Proposal Creator </a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Sharepoint</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Business Portal</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#" ng-click="vm.showProject">Create a Project</a></li>
-                <li><a href="#">Add a New Client</a></li>
-                <li><a href="#">Create a Proposal</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
+
+<body role="document">
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+        aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Ecosphere Project Proposal Creator </a>
       </div>
-    </nav>
-<div class="page-header">
-  .label
-</div>
-  <div class="row">
-    <div class="col-sm-6 col-xs-12 col-med-4 col-lg-4">
-      <div id="dragTarget" class="panel panel-default og-img-background">
-        <div class="panel-heading">
-          <div class="panel-title title-text">
-            <a role="label" href="#colPanel" data-toggle="collapse">
-        Task {{vm.task.name}}
-        <span class="pull-right">Total: {{vm.task.total | currency}}</span>
-        </a>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Sharepoint</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Business Portal</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#" ng-click="vm.showProject">Create a Project</a></li>
+              <li><a href="#">Add a New Client</a></li>
+              <li><a href="#">Create a Proposal</a></li>
+              <li role="separator" class="divider"></li>
+              <li class="dropdown-header">Nav header</li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
+    </div>
+  </nav>
+  <div class="container" ng-controller="Main as vm">
+    <div class="page-header">
+      <h3 editable-text="vm.project.name">{{vm.project.name}}  <small class="pull-right">Project Total: {{vm.project.totalCost | currency }}</small></h3>
+      <button class="btn btn-primary" ng-click="vm.addTask()">Add a task <span class="glyphicon glyphicon-plus"></span></button>
+    </div>
+    <div class="col-sm-6 col-xs-12 col-med-6 col-lg-6">
+      <div class="animate-repeat" ng-repeat="task in vm.project.tasks">
+        <div class="panel panel-default og-img-background">
+          <div class="panel-heading">
+            <div class="panel-title title-text">
+              <span editable-text="task.name">Task {{task.name || 'Click to enter name'}}</span>
+              <a href="#colPanel_{{$index}}" data-toggle="collapse"> <span class="glyphicon glyphicon-chevron-down"></span></a>
+              <span class="pull-right">Total: {{task.total | currency}}</span>
+            </div>
+          </div>
+          <div id="colPanel_{{$index}}" class="panel-collapse collapse in">
+            <div class="panel-body">
+              <ul class="list-group ">
+                <li class="list-group-item low-padding" ng-repeat="resource in task.resources" ng-animate="'animate'">
+                  <div class="media">
+                    <div class="media-left">
+                      <img class="media-object thumb-xs" ng-src="content/images/{{resource.img}}" alt="" />
+                    </div>
+                    <div class="media-body">
+                      <span class="media-heading title">{{resource.name}} @ {{resource.hours}}</span>
+                      <span class="title pull-right">{{resource.rate * resource.hours | currency}}</span>
+                      <br />
+                      <span>{{resource.employees}}</span>
+                      <button ng-click="vm.removeFromTask($index)" class="btn btn-danger btn-xs pull-right btn-space">
+                        <span class="glyphicon glyphicon-trash"></span>
+                      </button>
+                      <button ng-click="vm.editResource($index)" class="btn btn-warning btn-xs pull-right btn-space">
+                        <span class="glyphicon glyphicon-pencil"></span>
+                      </button>
+                    </div>
+                  </div>
+                </li>
+                <br />
+              </ul>
+              <button class="btn btn-xs btn-success pull-right" ng-click="vm.toggleResource()">Add a Resource
+                <span class="glyphicon glyphicon-plus"></span>
+              </button>
+            </div>
           </div>
         </div>
-        <div id="colPanel" class="panel-collapse collapse in">
+      </div>
+    </div>
+    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+      <div ng-show="vm.resourceVisible" id="resource" class="slide-right" >
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            <div class="panel-title">
+              {{vm.addResource.name}} Rate: {{vm.addResource.rate}}
+              <span class="pull-right">Total: {{vm.addResource.hours * vm.addResource.rate | currency }}</span>
+            </div>
+          </div>
           <div class="panel-body">
-            <ul class="list-group ">
-              <li class="list-group-item low-padding" ng-repeat="resource in vm.task.resources">
-                <div class="media">
-                  <div class="media-left">
-                    <img class="media-object thumb-xs" ng-src="content/images/{{resource.img}}" alt="" />
-                  </div>
-                  <div class="media-body">
-                    <span class="media-heading title">{{resource.name}} @ {{resource.hours}}</span>
-                    <span class="title pull-right">{{resource.rate * resource.hours | currency}}</span>
-                    <br />
-                    <span>{{resource.employees}}</span>
-                    <button ng-click="vm.removeFromTask($index)" class="btn btn-danger btn-xs pull-right btn-space">
-                      <span class="glyphicon glyphicon-trash"></span>
-                    </button>
-                    <button ng-click="vm.editResource($index)" class="btn btn-warning btn-xs pull-right btn-space">
-                      <span class="glyphicon glyphicon-pencil"></span>
-                    </button>
-                  </div>
-                </div>
-              </li>
-              <br />
-            </ul>
-            <button class="btn btn-xs btn-success pull-right" ng-click="vm.toggleResource()">Add a Resource
-              <span class="glyphicon glyphicon-plus"></span>
+            <div class="input-group input-group-sm">
+              <label for="resName">Enter resource</label>
+              <input id="resName" name="resName" type="text" class="form-control" ng-model="vm.addResource.name" />
+            </div>
+            <br/>
+            <div class="input-group input-group-sm">
+              <label for="resHours">Enter hours</label>
+              <input id="resHours" name="resHours" class="form-control" type="text" ng-model="vm.addResource.hours" />
+            </div>
+            <hr/>
+            <div class="btn-group">
+              <button class="btn btn-success dropdown-toggle btn-xs" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Add To <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu">
+                <li ng-repeat="task in vm.project.tasks">
+                  <a href="#" ng-click="vm.addToTask(vm.addResource, $index)">{{task.name}}</a>
+                </li>
+              </ul>
+            </div>
+            <button class="btn btn-danger btn-xs" ng-click="vm.clear()">Clear <span class="glyphicon glyphicon-remove-sign"></span>
             </button>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <h5>Select a resource and drag to the task</h5>
-  <div class="row">
-    <div id="resource" class="col-xs-6 col-sm-6 col-md-4 movable" draggable="true">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <div class="panel-title">
-            {{vm.addResource.name}}  Rate: {{vm.addResource.rate}}
-            <span class="pull-right">Total: {{vm.addResource.hours * vm.addResource.rate | currency }}</span>
-          </div>
-        </div>
-        <div class="panel-body">
-          <div class="input-group input-group-sm">
-            <label for="resName">Enter resource</label>
-            <input id="resName" name="resName" type="text" class="form-control" ng-model="vm.addResource.name" />
-          </div><br/>
-          <div class="input-group input-group-sm">
-            <label for="resHours">Enter hours</label>
-            <input id="resHours" name="resHours" class="form-control" type="text" ng-model="vm.addResource.hours"/>
-          </div>
-          <hr/>
-          <button ng-hide="vm.isEdit" class="btn btn-success btn-xs" ng-click="vm.addToTask(vm.addResource)">Add to task <span class="glyphicon glyphicon-plus-sign"></span>
-          <button ng-show="vm.isEdit" class="btn btn-success btn-xs" ng-click="vm.addToTask(vm.addResource)">Save <span class="glyphicon glyphicon-plus-sign"></span>
-          <button class="btn btn-danger btn-xs" ng-click="vm.clear()">Clear <span class="glyphicon glyphicon-remove-sign"></span>
-          </button>
-        </div>
-      </div>
-    </div>
-    <script src="app/index.js"></script>
     <script src="app/ees_project.js"></script>
+    <script src="./lib/xeditable.js"></script>
 </body>
 
 </html>
