Add slide right

--- a/client/index.html
+++ b/client/index.html
@@ -109,8 +109,8 @@
       </div>
     </div>
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-      <div ng-show="vm.resourceVisible" id="resource" class="slide-right" >
-        <div class="panel panel-info">
+      <div id="resource" >
+        <div ng-show="vm.resourceVisible" class="panel panel-info slide-right">
           <div class="panel-heading">
             <div class="panel-title">
               {{vm.addResource.name}} Rate: {{vm.addResource.rate}}
